PIR231/nohup.out
  File "app.py", line 2
    import /home/pi/nutc-smart-bathroom/PIT231/PIR231_api
           ^
SyntaxError: invalid syntax
